Modificados algunas etiquetas class

--- a/index.html
+++ b/index.html
@@ -23,59 +23,70 @@
         <img class="icon shopping-cart" src="./Iconos/icon-shopping-cart.svg" />
       </div>
     </nav>
-
     <main>
       <section>
         <h2>NUEVAS COLECCIONES</h2>
 
         <div class="product-img-container">
-          <div class="product1">
+          <div class="product">
             <img
               src="./Imágenes/image-1.jpg"
               alt="Mujer rubia con vestido de color aguamarina ajustado de tirantes por debajo de la rodilla"
             />
-            <span class="product-name">Vestido</span>
-            <span class="product-price">34.99€</span>
+            <div class="product-info">
+              <span class="product-name">Vestido</span>
+              <span class="product-price">34.99€</span>
+            </div>
           </div>
-          <div class="product2">
+          <div class="product">
             <img
               src="./Imágenes/image-2.jpg"
               alt="Mujer rubia con conjunto amarillo de camisa y pantalones cortos"
             />
-            <span class="product-name">Camisa</span>
-            <span class="product-price">44.99€</span>
+            <div class="product-info">
+              <span class="product-name">Camisa</span>
+              <span class="product-price">44.99€</span>
+            </div>
           </div>
-          <div class="product3">
+          <div class="product">
             <img
               src="./Imágenes/image-3.jpg"
               alt="Mujer morena con tank top verde claro, pantalones largos blancos y sandalias blancas"
             />
-            <span class="product-name">Vaqueros</span>
-            <span class="product-price">79.99€</span>
+            <div class="product-info">
+              <span class="product-name">Vaqueros</span>
+              <span class="product-price">79.99€</span>
+            </div>
           </div>
-          <div class="product4">
+          <div class="product">
             <img
               src="./Imágenes/image-4.jpg"
               alt="Hombre moreno con polo marrón clara y pantalones de pinza color caqui"
             />
-            <span class="product-name">Polo</span>
-            <span class="product-price">44.95€</span>
+            <div class="product-info">
+              <span class="product-name">Polo</span>
+              <span class="product-price">44.95€</span>
+            </div>
           </div>
-          <div class="product5">
+          <div class="product">
             <img
               src="./Imágenes/image-5.jpg"
               alt="Hombre rubio con camisa de botones negros color blanco hueso y pantalones negros"
             />
-            <span class="product-name">Camisa</span>
-            <span class="product-price">25.00€</span>
+            <div class="product-info">
+              <span class="product-name">Camisa</span>
+              <span class="product-price">25.00€</span>
+            </div>
           </div>
-          <div class="product6">
+          <div class="product">
             <img
               src="./Imágenes/image-6.jpg"
               alt="Hombre moreno con camiseta blanca de manga corta con logo CONECT"
             />
-            <span class="product-name">Camiseta</span>
-            <span class="product-price">22.99€</span>
+            <div class="product-info">
+              <span class="product-name">Camiseta</span>
+              <span class="product-price">22.99€</span>
+            </div>
           </div>
         </div>
       </section>
