--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="icon shopping-cart" src="./Iconos/icon-shopping-cart.svg" />
       </div>
     </nav>
-    <main>
+    <main class="main-container">
       <section>
         <h2>NUEVAS COLECCIONES</h2>
 
@@ -92,15 +92,22 @@
       </section>
     </main>
 
-    <footer>
-      <img class="icon" src="./Iconos/icon-truck.svg" /><a href="/">Entrega</a>
-      <a href="/">Devoluciones y cambios</a>
-      <img class="icon" src="./Iconos/icon-phone.svg" /><a href="/"
-        >+375 (29) 749-18-23</a
-      >
-      <img class="icon" src="./Iconos/icon-mail.svg" /><a href="/"
-        >superblue@shop-online.com</a
-      >
+    <footer class="footer">
+      <div>
+        <div class="icon"><img src="./Iconos/icon-truck.svg" /></div>
+        <a href="/">Entrega</a>
+      </div>
+      <div>
+        <a href="/">Devoluciones y cambios</a>
+      </div>
+      <div>
+        <div class="icon"><img src="./Iconos/icon-phone.svg" /></div>
+        <a href="/">+375 (29) 749-18-23</a>
+      </div>
+      <div>
+        <div class="icon"><img src="./Iconos/icon-mail.svg" /></div>
+        <a href="/">superblue@shop-online.com</a>
+      </div>
     </footer>
   </body>
 </html>
