Mejorando la responsividad para adaptar la página web al mayor número de dispositivos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </div>
 
       <div class="nav-icons">
-        <img class="icon profile" src="./Iconos/icon-user.svg" />
-        <img class="icon heart" src="./Iconos/icon-heart.svg" />
-        <img class="icon shopping-cart" src="./Iconos/icon-shopping-cart.svg" />
+        <img src="./Iconos/icon-user.svg" />
+        <img src="./Iconos/icon-heart.svg" />
+        <img src="./Iconos/icon-shopping-cart.svg" />
       </div>
     </nav>
     <main class="main-container">
