Enlaces separados en sus respectivos contenedores

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <img class="icon menu-burguer" src="./Iconos/icon-menu-burguer.svg" />
 
       <div class="nav-sections">
-        <a href="/">MODA MUJER</a>
-        <a href="/">MODA HOMBRE</a>
-        <a href="/">NUEVA COLECCIÓN</a>
-        <a href="/">COLECCIONES ESPECIALES</a>
+        <div class="section"><a href="/">MODA MUJER</a></div>
+        <div class="section"><a href="/">MODA HOMBRE</a></div>
+        <div class="section"><a href="/">NUEVA COLECCIÓN</a></div>
+        <div class="section"><a href="/">COLECCIONES ESPECIALES</a></div>
       </div>
 
       <div class="nav-icons">
